# dlt-iceberg

./: .gitignore  README.md  TESTING.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml  test.yml
examples/: README.md  incremental_load.py  merge_load.py  usgs_earthquakes.py
examples/data/: customers_initial.csv  customers_updates.csv  events_batch1.csv  events_batch2.csv
src/dlt_iceberg/: __init__.py  adapter.py  destination.py  destination_client.py  merge_utils.py  partition_builder.py  schema_casting.py  schema_converter.py  schema_evolution.py  sql_client.py
src/sidequery_dlt/: __init__.py  destination.py  destination_client.py  error_handling.py  partition_builder.py
tests/: test_adapter.py  test_capabilities.py  test_class_based_atomic.py  test_connection_pooling.py  test_dataset.py  test_delete_insert_merge.py  test_destination_e2e.py  test_destination_rest_catalog.py  test_drop_tables.py  test_e2e_sqlite_catalog.py  test_error_handling.py  test_lakekeeper.py  test_load_metadata_resilience.py  test_merge_disposition.py  test_merge_utils.py  test_partition_builder.py  test_partitioning_e2e.py  test_pyiceberg_append.py  test_schema_casting.py  test_schema_converter.py  test_schema_evolution.py  test_smoke.py  test_sparse_schema.py  test_state_sync_e2e.py  test_unity_catalog.py  test_with_state_sync.py
